[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Player esc menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Materials/Bullet.tres" type="Material" id=3]
[ext_resource path="res://Imported objects/Material_001.material" type="Material" id=4]
[ext_resource path="res://Imported objects/Material.material" type="Material" id=5]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=6]
[ext_resource path="res://Player/Player GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Crosshair.tscn" type="PackedScene" id=8]
[ext_resource path="res://Materials/Speed particasls.tres" type="Material" id=9]
[ext_resource path="res://Materials/Basic white.tres" type="Material" id=10]
[ext_resource path="res://Particals/SpeedParticals.tscn" type="PackedScene" id=11]
[ext_resource path="res://Particals/SlidingParticals.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Partical cache.gd" type="Script" id=13]
[ext_resource path="res://Partical meshs/Loading screen.tscn" type="PackedScene" id=14]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.74902, 0.74902, 0.74902, 1 )

[sub_resource type="CapsuleShape" id=12]
height = 0.75

[sub_resource type="CapsuleMesh" id=13]
mid_height = 0.75

[sub_resource type="PlaneMesh" id=23]
material = ExtResource( 10 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="PlaneMesh" id=6]
material = ExtResource( 3 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="PlaneMesh" id=24]
material = ExtResource( 9 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="PlaneMesh" id=7]
material = ExtResource( 5 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="PlaneMesh" id=8]
material = ExtResource( 4 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="BoxShape" id=5]

[sub_resource type="CubeMesh" id=11]

[node name="Player" type="KinematicBody" groups=["Can_break_glass"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="." groups=["Can_break_glass"]]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 1, 0 )
visible = false
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CrouchingCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.4, 0 )
visible = false
shape = SubResource( 12 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="CrouchingCollision"]
mesh = SubResource( 13 )
material/0 = null

[node name="Partical holder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="SlidingParticals" parent="Partical holder" instance=ExtResource( 12 )]

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.95, 0 )

[node name="Camera" type="Camera" parent="head"]
fov = 100.0
near = 0.01
far = 800.0

[node name="Muli cache" type="Spatial" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
script = ExtResource( 13 )

[node name="MeshInstance5" type="MeshInstance" parent="head/Camera/Muli cache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.011796, 0 )
mesh = SubResource( 23 )
material/0 = ExtResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="head/Camera/Muli cache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00975752, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="head/Camera/Muli cache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00780964, 0 )
mesh = SubResource( 24 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="head/Camera/Muli cache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00582981, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="head/Camera/Muli cache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0157542, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="SlidingParticals" parent="head/Camera/Muli cache" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 0.98563, 0.168919, 0, -0.168919, 0.98563, 0, 0, 0 )

[node name="SpeedParticals" parent="head/Camera/Muli cache" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[node name="Control" parent="head/Camera/Muli cache" instance=ExtResource( 14 )]

[node name="Timer" type="Timer" parent="head/Camera/Muli cache"]
wait_time = 0.5
one_shot = true

[node name="Bullet holder" type="Spatial" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Gun" type="Node" parent="head/Bullet holder"]
script = ExtResource( 6 )

[node name="Bullet direction" type="Spatial" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="SpeedParticals" parent="head" instance=ExtResource( 11 )]

[node name="HeadTween" type="Tween" parent="head"]

[node name="wall_run time out" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Slide_time time out" type="Timer" parent="."]
one_shot = true

[node name="Right_collision" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0.5, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Right_collision"]
transform = Transform( 0.1, 0, 0, 0, 0.25, 0, 0, 0, 0.5, -0.1, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Right_collision/CollisionShape"]
mesh = SubResource( 10 )
material/0 = null

[node name="Left_collision" type="Area" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.25, 0, 0, 0, 0.5, -1, 0.5, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Left_collision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0983, 0, 0 )
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Left_collision/CollisionShape"]
mesh = SubResource( 11 )
material/0 = null

[node name="UI holder" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GUI" parent="UI holder" instance=ExtResource( 7 )]

[node name="Crosshair" parent="UI holder" instance=ExtResource( 8 )]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Player esc menu" parent="UI holder" instance=ExtResource( 2 )]
visible = true
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Headpos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.95, 0 )

[node name="CrouchHeadpos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]

[connection signal="timeout" from="head/Camera/Muli cache/Timer" to="head/Camera/Muli cache" method="_on_Timer_timeout"]
[connection signal="timeout" from="wall_run time out" to="." method="_on_wall_run_time_out_timeout"]
[connection signal="timeout" from="Slide_time time out" to="." method="_on_Slide_time_time_out_timeout"]
[connection signal="body_entered" from="Right_collision" to="." method="_on_Right_collision_body_entered"]
[connection signal="body_exited" from="Right_collision" to="." method="_on_Right_collision_body_exited"]
[connection signal="body_entered" from="Left_collision" to="." method="_on_Left_collision_body_entered"]
[connection signal="body_exited" from="Left_collision" to="." method="_on_Left_collision_body_exited"]
[connection signal="update_dev_settings" from="UI holder/Player esc menu" to="." method="_on_Player_esc_menu_update_dev_settings"]
